# sdl2-opengl-pivot

./: .gitignore  CMakeLists.txt  README.md  _makefile_app  _makefile_clases_app  _makefile_controladores  _makefile_dependencias_main  _makefile_framework  configure.sh  main.cpp  makefile_common  makefile_comun  makefile_linux  makefile_win
class/: input.h
class/app/: definiciones.h  recursos.h
class/app/framework_impl/: app_config.h  input.h  kernel_config.cpp  kernel_config.h
class/controladores/: director_estados.cpp  director_estados.h  estados_controladores.h  main.cpp  principal.cpp  principal.h
class/controllers/: main.cpp  main.h  state_driver.cpp  state_driver.h  states.h
class/controllers_impl/: app_config.cpp  app_config.h  input.h  kernel_config.cpp  kernel_config.h  main.cpp  main.h  state_driver.cpp  state_driver.h  states.h
class/dfwimpl/: app_config.cpp  app_config.h  state_driver.cpp  state_driver.h
class/framework/: audio.cpp  audio.h  base_config.cpp  base_config.h  cargador_recursos.cpp  cargador_recursos.h  configuracion_base.cpp  configuracion_base.h  controller_interface.h  director_estados_interface.cpp  director_estados_interface.h  input.cpp  input.h  kernel.cpp  kernel.h  kernel_config_interface.h  kernel_driver_interface.cpp  kernel_driver_interface.h  messages.h  resource_loader.cpp  resource_loader.h  state_controller.cpp  state_controller.h  state_driver_interface.cpp  state_driver_interface.h
data/config/: config.dnot  config.json  configuracion.dnot
data/recursos/: audio.txt  fuentes.txt  musica.txt  texturas.txt
data/resources/: audio.txt  fonts.txt  music.txt  surfaces.txt  textures.txt
make/: app  app_dependencies  common_dependencies  controllers  core  dfw  linux.template
src/: CMakeLists.txt  main.cpp
src/class/: CMakeLists.txt  input.h
src/class/controllers/: CMakeLists.txt  main.cpp  main.h  states.h
src/class/dfwimpl/: CMakeLists.txt  app_config.cpp  app_config.h  state_driver.cpp  state_driver.h
